--- a/src/src/Client/Client.csproj
+++ b/src/src/Client/Client.csproj
@@ -14,7 +14,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.*" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.*" PrivateAssets="all" />
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.*" />
         <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.*" />
         <PackageReference Include="Microsoft.Extensions.Localization" Version="5.0.*" />
         <PackageReference Include="MudBlazor" Version="5.0.14" />
