--- a/src/src/Infrastructure/Infrastructure.csproj
+++ b/src/src/Infrastructure/Infrastructure.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<RootNamespace>GenocsBlazor.Infrastructure</RootNamespace>
 		<AssemblyName>GenocsBlazor.Infrastructure</AssemblyName>
 	</PropertyGroup>
@@ -11,10 +11,11 @@
 		<PackageReference Include="Blazored.LocalStorage" Version="4.1.2" />
 		<PackageReference Include="EPPlus" Version="5.7.0" />
 		<PackageReference Include="Hangfire.Core" Version="1.8.2" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.*" />        
 		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.*" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.*" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.*" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Application\Application.csproj" />
