--- a/src/src/Application/Application.csproj
+++ b/src/src/Application/Application.csproj
@@ -7,13 +7,13 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-        <PackageReference Include="FluentValidation" Version="11.5.2" />
+        <PackageReference Include="FluentValidation" Version="11.7.1" />
         <PackageReference Include="LazyCache" Version="2.4.0" />
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+        <PackageReference Include="MediatR" Version="12.1.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.*" />
         <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="6.0.*" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.2" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.4" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Domain\Domain.csproj" />
