--- a/src/src/Infrastructure.Shared/Infrastructure.Shared.csproj
+++ b/src/src/Infrastructure.Shared/Infrastructure.Shared.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <RootNamespace>GenocsBlazor.Infrastructure.Shared</RootNamespace>
         <AssemblyName>GenocsBlazor.Infrastructure.Shared</AssemblyName>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
