--- a/src/src/Server/Server.csproj
+++ b/src/src/Server/Server.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <RootNamespace>GenocsBlazor.Server</RootNamespace>
         <AssemblyName>GenocsBlazor.Server</AssemblyName>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <PropertyGroup>
         <DocumentationFile>GenocsBlazor.Server.xml</DocumentationFile>
@@ -31,13 +32,15 @@
         </PackageReference>
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
-        <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
-        <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
-        <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-        <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
+        <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+        <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Application\Application.csproj" />
@@ -46,10 +49,16 @@
         <ProjectReference Include="..\Shared\Shared.csproj" />
         <ProjectReference Include="..\Client\Client.csproj" />
     </ItemGroup>
-
+    
     <ItemGroup>
         <Folder Include="Files\Images\ProfilePictures\" />
         <Folder Include="Logs\" />
     </ItemGroup>
+    <ItemGroup>
+        <None Update="Files\Images\Products\demo.jpg">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+
 
 </Project>
