--- a/src/src/Server/appsettings.json
+++ b/src/src/Server/appsettings.json
@@ -9,10 +9,13 @@
   },
   "AllowedHosts": "*",
   "AppConfiguration": {
-    "Secret": "S0M3RAN0MS3CR3T!1!MAG1C!1!"
+    "Secret": "S0M3RAN0MS3CR3T!1!MAG1C!1!",
+    "BehindSSLProxy": false,
+    "ProxyIP": "",
+    "ApplicationUrl": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=GenocsBlazor;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=BlazorHero.CleanArchitecture;Integrated Security=True;MultipleActiveResultSets=True"
   },
   "MailConfiguration": {
     "From": "malinda.pagac@ethereal.email",
