--- a/src/src/Server/appsettings.json
+++ b/src/src/Server/appsettings.json
@@ -59,6 +59,12 @@
     ],
     "Properties": {
       "Application": "GenocsBlazor.Server"
+    },
+    "EPPlus": {
+      "ExcelPackage": {
+        "LicenseContext": "NonCommercial" //The license context used
+      }
+
     }
   }
 }
