--- a/src/template/src/Server/appsettings.Development.json
+++ b/src/template/src/Server/appsettings.Development.json
@@ -1,12 +1,13 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=GenocsBlazor;Integrated Security=True;MultipleActiveResultSets=True"
-  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "Microsoft": "Debug",
+      "Hangfire": "Debug",
+      "Microsoft.Hosting.Lifetime": "Debug"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=Genocs.BlazorClean.Template;Integrated Security=True;MultipleActiveResultSets=True"
   }
 }
