--- a/src/template/src/Server/appsettings.json
+++ b/src/template/src/Server/appsettings.json
@@ -15,7 +15,7 @@
     "ApplicationUrl": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=BlazorPortal.CleanArchitecture;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=Genocs.BlazorClean.Template;Integrated Security=True;MultipleActiveResultSets=True"
   },
   "MailConfiguration": {
     "From": "malinda.pagac@ethereal.email",
@@ -64,7 +64,6 @@
       "ExcelPackage": {
         "LicenseContext": "NonCommercial" //The license context used
       }
-
     }
   }
 }
