--- a/src/template/.editorconfig
+++ b/src/template/.editorconfig
@@ -172,6 +172,7 @@ csharp_style_expression_bodied_accessors = true:silent
 csharp_style_expression_bodied_lambdas = true:silent
 csharp_style_expression_bodied_local_functions = false:silent
 csharp_space_around_binary_operators = before_and_after
+csharp_indent_block_contents = true
 
 [*.{cs,vb}]
 #### Naming styles ####
