--- a/src/template/src/Client.Infrastructure/Client.Infrastructure.csproj
+++ b/src/template/src/Client.Infrastructure/Client.Infrastructure.csproj
@@ -18,4 +18,11 @@
         <ProjectReference Include="..\Application\Application.csproj" />
         <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="Roslynator.Analyzers" Version="4.6.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
 </Project>
