--- a/src/template/src/Infrastructure.Shared/Infrastructure.Shared.csproj
+++ b/src/template/src/Infrastructure.Shared/Infrastructure.Shared.csproj
@@ -16,4 +16,11 @@
         <ProjectReference Include="..\Application\Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Update="Roslynator.Analyzers" Version="4.6.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
