--- a/src/template/src/Infrastructure/Infrastructure.csproj
+++ b/src/template/src/Infrastructure/Infrastructure.csproj
@@ -12,7 +12,7 @@
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
         <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
         <PackageReference Include="EPPlus" Version="6.2.9" />
-        <PackageReference Include="Hangfire.Core" Version="1.8.5" />
+        <PackageReference Include="Hangfire.Core" Version="1.8.6" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.*" />
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
@@ -26,6 +26,12 @@
     <ItemGroup>
         <ProjectReference Include="..\Application\Application.csproj" />
         <ProjectReference Include="..\Shared\Shared.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Update="Roslynator.Analyzers" Version="4.6.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
