--- a/src/template/src/Shared/Shared.csproj
+++ b/src/template/src/Shared/Shared.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
         <RootNamespace>GenocsBlazor.Shared</RootNamespace>
         <AssemblyName>GenocsBlazor.Shared</AssemblyName>
     </PropertyGroup>
