--- a/src/template/src/Application/Application.csproj
+++ b/src/template/src/Application/Application.csproj
@@ -6,14 +6,14 @@
         <AssemblyName>GenocsBlazor.Application</AssemblyName>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="FluentValidation" Version="11.8.0" />
         <PackageReference Include="LazyCache" Version="2.4.0" />
         <PackageReference Include="MediatR" Version="12.1.1" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.*" />
-        <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="6.0.*" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
+        <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="7.0.13" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.4" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.5" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Domain\Domain.csproj" />
