--- a/src/template/src/Client/Client.csproj
+++ b/src/template/src/Client/Client.csproj
@@ -14,7 +14,7 @@
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.*" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.*" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.*" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.*" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.13" PrivateAssets="all" />
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.*" />
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.*" />
