--- a/src/template/src/Client/Client.csproj
+++ b/src/template/src/Client/Client.csproj
@@ -2,10 +2,12 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <IsPackable>false</IsPackable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>        
         <BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
         <RootNamespace>GenocsBlazor.Client</RootNamespace>
         <AssemblyName>GenocsBlazor.Client</AssemblyName>
-        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
