--- a/src/template/src/Client.Infrastructure/Client.Infrastructure.csproj
+++ b/src/template/src/Client.Infrastructure/Client.Infrastructure.csproj
@@ -2,6 +2,9 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <IsPackable>false</IsPackable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
         <RootNamespace>GenocsBlazor.Client.Infrastructure</RootNamespace>
         <AssemblyName>GenocsBlazor.Client.Infrastructure</AssemblyName>
     </PropertyGroup>
