--- a/src/template/src/Infrastructure.Shared/Infrastructure.Shared.csproj
+++ b/src/template/src/Infrastructure.Shared/Infrastructure.Shared.csproj
@@ -2,9 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <IsPackable>false</IsPackable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>        
         <RootNamespace>GenocsBlazor.Infrastructure.Shared</RootNamespace>
         <AssemblyName>GenocsBlazor.Infrastructure.Shared</AssemblyName>
-        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
