--- a/src/template/src/Infrastructure/Infrastructure.csproj
+++ b/src/template/src/Infrastructure/Infrastructure.csproj
@@ -2,9 +2,12 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <IsPackable>false</IsPackable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
         <RootNamespace>GenocsBlazor.Infrastructure</RootNamespace>
         <AssemblyName>GenocsBlazor.Infrastructure</AssemblyName>
-        <LangVersion>latest</LangVersion>
+
     </PropertyGroup>
 
     <ItemGroup>
