--- a/src/template/src/Shared/Shared.csproj
+++ b/src/template/src/Shared/Shared.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+        <IsPackable>false</IsPackable>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>GenocsBlazor.Shared</RootNamespace>
