--- a/src/template/src/Server/appsettings.json
+++ b/src/template/src/Server/appsettings.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "AppConfiguration": {
-    "Secret": "S0M3RAN0MS3CR3T!1!MAG1C!1!",
+    "Secret": "S0M3RAN0MS3CR3T!1!MAG1C!1!Lon6enougf!",
     "BehindSSLProxy": false,
     "ProxyIP": "",
     "ApplicationUrl": ""
