--- a/src/template/src/Server/Server.csproj
+++ b/src/template/src/Server/Server.csproj
@@ -10,7 +10,7 @@
     <PropertyGroup>
         <DocumentationFile>GenocsBlazor.Server.xml</DocumentationFile>
         <NoWarn>1701;1702;1591</NoWarn>
-        <UserSecretsId>aa8b7360-671b-4ab2-99b0-7df28629ef3d</UserSecretsId>
+        <UserSecretsId>Genocs</UserSecretsId>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
         <DockerfileContext>..\..</DockerfileContext>
