--- a/src/template/src/Application/Application.csproj
+++ b/src/template/src/Application/Application.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <IsPackable>false</IsPackable>
         <RootNamespace>Genocs.BlazorClean.Template.Application</RootNamespace>
         <AssemblyName>Genocs.BlazorClean.Template.Application</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+        <PackageReference Include="AutoMapper" Version="13.0.1" />
         <PackageReference Include="FluentValidation" Version="11.9.2" />
         <PackageReference Include="LazyCache" Version="2.4.0" />
         <PackageReference Include="MediatR" Version="12.3.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
-        <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="7.0.13" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+        <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.6" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.2" />
     </ItemGroup>
