--- a/src/template/src/Client/Client.csproj
+++ b/src/template/src/Client/Client.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <IsPackable>false</IsPackable>
         <BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
         <RootNamespace>Genocs.BlazorClean.Template.Client</RootNamespace>
@@ -11,17 +11,16 @@
     <ItemGroup>
         <PackageReference Include="Blazored.FluentValidation" Version="2.2.0" />
         <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
-        <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.*" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.*" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.*" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.13" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.6" PrivateAssets="all" />
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.*" />
-        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.*" />
-        <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.*" />
-        <PackageReference Include="Microsoft.Extensions.Localization" Version="6.0.*" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.6" />
+        <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.6" />
         <PackageReference Include="MudBlazor" Version="6.20.0" />
-        <PackageReference Include="System.Net.Http.Json" Version="7.0.1" />
+        <PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
