--- a/src/template/src/Infrastructure/Infrastructure.csproj
+++ b/src/template/src/Infrastructure/Infrastructure.csproj
@@ -1,23 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <IsPackable>false</IsPackable>
         <RootNamespace>Genocs.BlazorClean.Template.Infrastructure</RootNamespace>
         <AssemblyName>Genocs.BlazorClean.Template.Infrastructure</AssemblyName>
     </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <ItemGroup>        
         <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
         <PackageReference Include="EPPlus" Version="7.2.0" />
         <PackageReference Include="Hangfire.Core" Version="1.8.14" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.*" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.6" />
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.24" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.13">
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
